--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "avenir",
   "version": "0.0.1",
   "description": "Lightweight async library based on lazy futures (Tasks)",
-  "main": "src/index.js",
+  "main": "lib/index.js",
+  "module": "es/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yelouafi/avenir.git"
@@ -22,19 +23,36 @@
   "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "cross-env": "^5.0.1",
     "eslint": "^3.19.0",
     "faucet": "0.0.1",
     "husky": "^0.13.3",
     "jsdoc": "^3.4.3",
     "lint-staged": "^3.4.1",
     "minami": "^1.2.3",
+    "npm-run-all": "^4.0.2",
+    "prettier": "^1.5.3",
     "rimraf": "^2.6.1",
+    "rollup": "^0.45.2",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-uglify": "^2.0.1",
     "tape": "^4.6.3"
   },
   "scripts": {
+    "clean": "rimraf dist es lib",
+    "build:umd:dev": "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -i src/index.js -o dist/avenir.js",
+    "build:umd:prod": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -i src/index.js -o dist/avenir.min.js",
+    "build:cjs": "cross-env BABEL_ENV=cjs babel src --out-dir lib",
+    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
+    "build": "npm run clean && run-p build:**",
     "precommit": "lint-staged",
     "lint": "eslint src test",
-    "test": "tape \"test/**/*.js\" | faucet",
+    "test": "cross-env BABEL_ENV=cjs babel-node test/index.js | faucet",
     "check": "npm run lint && npm run test",
     "gen-docs": "rimraf docs && jsdoc src --configure .jsdoc.json --verbose"
   },
